--- a/education.html
+++ b/education.html
@@ -2,7 +2,7 @@
 <html lang="en" light-mode="dark">
 
 <head>
-    <title>John Doe | Education</title>
+    <title>Mayank kumar | Education</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="free portfolio template,portfolio template, portfolio website template, open source, open sourcing, contributing to open source" />
@@ -14,15 +14,15 @@
     <meta name="AdsBot-Google" content="index,follow" />
 
     <meta property="og:site_name" content="https://portfolio.smaranjitghose.codes/education.html">
-    <meta property="og:title" content="John Doe | Education">
+    <meta property="og:title" content="Mayank Kumar | Education">
     <meta property="og:description" content="This project serves free and beautiful portfolio template for everyone. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://portfolio.smaranjitghose.codes/education.html">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="https://portfolio.smaranjitghose.codes/education.html">
 
-    <meta name="application-name" content="John Doe | Education" />
-    <meta name="apple-mobile-web-app-title" content="John Doe | Education" />
+    <meta name="application-name" content="Mayank Kumar | Education" />
+    <meta name="apple-mobile-web-app-title" content="Mayank Kumar | Education" />
     <meta name="summary" content="An open source project aimed at providing free and beautiful templates to everyone for building their portfolio websites and showcase their work to the world." />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
 
@@ -289,14 +289,14 @@
 
       <div class="timeline-content js--fadeInLeft">
         <div class="timeline-img-header" style="background-image: url('assets/images/education-page/edTimeline1.png'); background-repeat: no-repeat; background-size: auto;"></div>
-        <div class="date date1">2021-2022</div>
+        <div class="date date1">2021-2025</div>
         <div>
-            <h2 class="timelineHeading">Columbia University</h2>
-            <h6>Masters of Science, Computer Science & Engineering</h6>
-            <li>Top 1% in the department</li>
-            <li>Best Undergraduate Researcher</li>
-            <li>Betsy Schumacker Woman</li>
-            <li>Athlete of the Year Award</li>
+            <h2 class="timelineHeading">Chandigarh University, Mohali, Punjab</h2>
+            <h6>Bachelor of Engineering in Computer Science</h6>
+            <li> CGPA: 8.20 </li>
+            <li>Top 10% Award</li>
+            <li>Took Sessions on Cybersecurity</li>
+            <li>Coordinator: CyberNet </li>
         </div>
       </div>
    </div> 
@@ -310,18 +310,41 @@
         <div>
             <div class="timeline-img-header" style="background-image: url('assets/images/education-page/edTimeline2.png'); background-repeat: no-repeat; background-size: auto; background-position: center top"></div>
         </div>
-        <div class="date date2">2017-2021</div>
+        <div class="date date2">2018-2020</div>
         <div class="alignment">
-            <h3 class="timelineHeading2">Massachusetts Institute of Technology</h3>
-            <h6>Bachelors of Science, Computer Science & Engineering</h6>
-            <li>Top 1% in the department</li>
-            <li>Best undergraduate Reseracher</li>
-            <li>Betsy Schumacker Woman</li>
-            <li>Athlete of the Year Award</li>
+            <h3 class="timelineHeading2">Chinmaya Vidyalaya, Bokaro,Jharkhand</h3>
+            <h6>Intermediate(CBSE) </h6>
+            <li>Physics, Chemistry, Maths, Computer Science</li>
+            <li>Percentage: 94.2%</li>
+            <li>Best Academic Scholar Award</li>
+            <li>Joint Secretary: School Club</li>
         </div>
       </div>
 
     </div>   
+
+
+
+    <div class="timeline-item">
+
+        <div class="timeline-img"></div>
+  
+        <div class="timeline-content timeline-card js--fadeInRight">
+          <div>
+              <div class="timeline-img-header" style="background-image: url('assets/images/education-page/edTimeline2.png'); background-repeat: no-repeat; background-size: auto; background-position: center top"></div>
+          </div>
+          <div class="date date2">2016-2018</div>
+          <div class="alignment">
+              <h3 class="timelineHeading2">36 Jharkhand BN NCC</h3>
+              <h6>Certificate: A</h6>
+              <li>Certificate no: JH16JDA305437</li>
+              <li>Batallion: Dhanbad</li>
+              <li>Rank: Cdt</li>
+              <li>Best Cadet Award</li>
+          </div>
+        </div>
+  
+      </div>  
 
     <!-- Third -->
 
@@ -331,13 +354,13 @@
 
       <div class="timeline-content js--fadeInLeft">
         <div class="timeline-img-header" style="background-image: url('assets/images/education-page/edTimeline3.png'); background-repeat: no-repeat; background-size: auto"></div>
-        <div class="date date3">2013-2017</div>
+        <div class="date date3">2016-2018</div>
         <div class="align-third">
-            <h2 class="timelineHeading3">Delhi Public School</h2>
-            <h6>High School</h6>
-            <li>Top 1% in the department</li>
-            <li>Best undergraduate Reseracher</li>
-            <li>Betsy Schumacker Woman</li>
+            <h2 class="timelineHeading3">Sido Kanhu High School, Dumka, Jharkhand</h2>
+            <h6>Matriculation(CBSE)</h6>
+            <li>Percentage: 93.2%</li>
+            <li>School Captain</li>
+            <li>NCC Commander</li>
             <li>Athlete of the Year Award</li>
         </div>
       </div>
