--- a/techstack.html
+++ b/techstack.html
@@ -2,7 +2,7 @@
 <html lang="en" light-mode="dark">
 
 <head>
-    <title>John Doe | Tech Stack</title>
+    <title>Mayank Kumar | Tech Stack</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -22,7 +22,7 @@
 
     <!-- Open Graph for Social Media -->
     <meta property="og:site_name" content="https://portfolio.smaranjitghose.codes/techstack.html" />
-    <meta property="og:title" content="John Doe | Tech Stack" />
+    <meta property="og:title" content="Mayank Kumar | Tech Stack" />
     <meta property="og:description"
         content="This project serves as a free and beautiful portfolio template for everyone who needs the perfect portfolio. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world." />
     <meta property="og:type" content="website" />
@@ -32,8 +32,8 @@
     <!-- Twitter Posts -->
     <meta name="twitter:site" content="https://portfolio.smaranjitghose.codes/techstack.html" />
 
-    <meta name="application-name" content="John Doe | Tech Stack" />
-    <meta name="apple-mobile-web-app-title" content="John Doe | Tech Stack" />
+    <meta name="application-name" content="Mayank Kumar | Tech Stack" />
+    <meta name="apple-mobile-web-app-title" content="Mayank Kumar | Tech Stack" />
     <meta name="summary"
         content="An open source project aimed at providing free and beautiful templates to everyone for building their portfolio websites and showcase their work to the world." />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
@@ -204,16 +204,18 @@
                         The combination of technology that i like to work with
                     </p>
                     <div class="techstacks_icons" style="display: flex;flex-wrap: wrap;">
+                        <div class="cpp_icon techstack_icon"><i class="fab fa-cuttlefish">++</i></div>
+                        <div class="linux_icon techstack_icon"><i class="fab fa-linux"></i></div>
+                        <div class="python_icon techstack_icon"><i class="fab fa-python"></i></div>
+                        <div class="java_icon techstack_icon"><i class="fab fa-java"></i></div>
                         <div class="html_icon techstack_icon"><i class="fab fa-html5"></i></div>
                         <div class="css_icon techstack_icon"><i class="fab fa-css3-alt"></i></div>
-                        <div class="js_icon techstack_icon"><i class="fab fa-js-square"></i></div>
-                        <div class="node_icon techstack_icon"><i class="fab fa-node"></i></div>
-                        <div class="python_icon techstack_icon"><i class="fab fa-python"></i></div>
-                        <div class="cpp_icon techstack_icon"><i class="fab fa-cuttlefish">++</i></div>
                         <div class="c_icon techstack_icon"><i class="fab fa-cuttlefish"></i></div>
+                        <div class="ubuntu_icon techstack_icon"><i class="fab fa-ubuntu"></i></div>
                         <div class="git_icon techstack_icon"><i class="fab fa-git-alt"></i></div>
-                        <div class="bootstrap_icon techstack_icon"><i class="fab fa-bootstrap"></i></div>
-                        <div class="react_icon techstack_icon"><i class="fab fa-react"></i></div>
+                        <div class="windows_icon techstack_icon"><i class="fab fa-windows"></i></div>
+                        <div class="docker_icon techstack_icon"><i class="fab fa-docker"></i></div>
+                        <div class="github_icon techstack_icon"><i class="fab fa-github-square"></i></div>
                     </div>
                 </div>
 
